0.9.7 (2013-03-06)
------------------

Bug Fixes
~~~~~~~~~

- Readonly checkbox template had a logic error.

Documentation
~~~~~~~~~~~~~

- Corrected the expected server response when using the Autocomplete widget.

0.9.6 (2013-01-10)
------------------

Bug Fixes
~~~~~~~~~

- Fixed remove bug in nested sequences.  See
  https://github.com/Pylons/deform/pull/89

- Fixed bug wherein items added to a sequence nor the initial items rendered
  in a sequence would not reflect the correct defaults of the item widget.
  See https://github.com/Pylons/deform/pull/79

Dependencies
~~~~~~~~~~~~

- Depend on and use zope.deprecation to deprecate Set class.

- Deform now depends on Colander >= 1.0a1 (previously it depended on >= 0.8).
  It requires Colander 1.0a1's newer ``cstruct_children`` and
  ``appstruct_children`` methods of schema objects as well as being able to
  import objects from Colander that don't exist in earlier versions.

- Deform now depends on Chameleon >= 2.5.1 (previously it depended on
  >= 1.2.3).  It requires the Markup class supplied by this version or better.

- Deform no longer has a setup_requires dependency on setuptools_git
  (useless, as the version on PyPI is broken).

- Setup.py now includes all testing requirements in tests_require that are in
  testing extras and vice versa.

Features
~~~~~~~~

- Allow SelectWidget to produce <optgroup> HTML tags.  See
  https://github.com/Pylons/deform/pull/87

- Allow ``deform.form.Form`` constructor to accept an ``autocomplete``
  keyword argument, which controls the ``autocomplete`` attribute of the form
  tag.

- Add Python 3.3 Trove classifier.

- Pass through unknown keys in a ``filedict`` FileData serialization (FBO of
  passing out of band information).

- ``deform.Set`` type deprecated in favor of use of ``colander.Set``.

- Give the preview_url method of the tempstore access to the stored
  item. [tomster]

- Add ``style`` attribute/arguments to textinput-related widgets allowing you